--- a/framing/build.gradle
+++ b/framing/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
 
+    compile 'com.android.support:support-annotations:22.2.0'
 }
 
 task androidJavadocs(type: Javadoc) {
