--- a/frame2/src/main/AndroidManifest.xml
+++ b/frame2/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.yyx.frame2">
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
+    <application android:allowBackup="true"
+        android:icon="@drawable/lib_icon"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -11,6 +14,27 @@
             </intent-filter>
         </activity>
         <activity android:name=".sample.MainActivity"/>
+        <activity android:name=".buttonstyle.MainActivity"
+            android:theme="@android:style/Theme.Holo.Light"/>
+        <activity
+            android:name=".buttonstyle.Sample1Activity"
+            android:theme="@android:style/Theme.Holo.Light"/>
+
+        <activity
+            android:name=".buttonstyle.Sample2Activity"
+            android:theme="@android:style/Theme.Holo.Light"/>
+
+        <activity
+            android:name=".buttonstyle.Sample3Activity"
+            android:theme="@android:style/Theme.Holo.Light"/>
+
+        <activity
+            android:name=".buttonstyle.Sample4Activity"
+            android:theme="@android:style/Theme.Holo.Light"/>
+
+        <activity
+            android:name=".buttonstyle.Sample5Activity"
+            android:theme="@android:style/Theme.Holo.Light"/>
     </application>
 
 </manifest>
