--- a/frame2/src/main/AndroidManifest.xml
+++ b/frame2/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
 
         <activity
             android:name=".example.MainActivity" />
+        <activity
+            android:name=".discrollview.MainActivity" />
     </application>
 
 </manifest>
